--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2024"
 [dependencies]
 rustls = "0.23"
 webpki-roots = "1.0.2"
+
+env_logger = "0.11"
+error-iter = "0.4"
+log = "0.4"
+softbuffer = "0.4.6"
+winit = "0.30"
+rusttype = "0.9.3"
+winit_input_helper = "0.16"
